--- a/properties/conf.properties
+++ b/properties/conf.properties
@@ -1,3 +1,5 @@
-﻿name  '=xiaoming 你好 #comment
+﻿name =xiaoming #你好 #comment
 #name=xiao ming#comment
-#age=
+"ge"="7000 0"
+
+name=#xiao ming#comment
